--- a/assets/memu.css
+++ b/assets/memu.css
@@ -11,7 +11,6 @@
     left: 0px;
     top: 0;
     width: 250px;
-    /* 其他样式... */
     background-color: #409EFF;
     height: 100vh;
     border-radius: 8px;
@@ -100,7 +99,7 @@ li {
 .sub-menu-traffic-expanded {
     background-color: #f2f6fc;
     height: 150px;
-    transition: 1s;
+    transition: 0.75s;
     border-radius: 8px;
     padding: 20px 35px;
     box-shadow: 03px 4px 16px rgba(26, 27, 27, 0.4);
@@ -152,8 +151,14 @@ li {
     box-shadow: 03px 2px 2px rgba(167, 171, 171, 0.4);
     border-style: hidden;
     border-radius: 8px;
+    position: absolute;
+    top: 130px;
 }
 
 .button-style:hover {
     background-color: #87cefa;
+}
+
+.map-style {
+    margin-left: 70px'
 }
