--- a/assets/memu.css
+++ b/assets/memu.css
@@ -16,7 +16,7 @@
     border-radius: 8px;
     position: relative;
     z-index: 2000;
-    transition: 1s;
+    transition: 0.75s;
     padding: 8px;
     box-shadow: 03px 4px 16px rgba(26, 27, 27, 0.4)
 }
@@ -29,7 +29,7 @@
     border-radius: 8px;
     position: relative;
     padding: 8px;
-    transition: 1s;
+    transition: 0.75s;
     box-shadow: 03px 4px 16px rgba(26, 27, 27, 0.4)
 }
 
@@ -161,4 +161,49 @@ li {
 
 .map-style {
     margin-left: 70px'
+}
+
+.checkbox {
+    position: absolute;
+    left: 190px;
+    top: 12px;
+    width: 60px;
+    height: 30px;
+    background: #409EFF;
+    border-radius: 15px;
+    /* border-top: 0.02em solid #ececec;
+    border-bottom: 0.02em solid #ececec; */
+}
+
+.checkbox .inner {
+    position: absolute;
+    left: 6px;
+    top: 6px;
+    right: 6px;
+    bottom: 6px;
+    background: #C0C4CC;
+    border-radius: 9px;
+    /* box-shadow: inset 0 0 10px rgba(0,0,0,0.5); */
+}
+
+.checkbox .inner.on {
+    background: #67C23A;
+    transition: 0.5s;
+}
+
+.checkbox .inner .switch {
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    top: -2px;
+    left: -2px;
+    background: #fff;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, .5);
+    transition: 0.5s;
+}
+
+.checkbox .inner.on .switch {
+    left: 28px;
+    transition: 0.5s;
 }
