--- a/project/assets/memu.css
+++ b/project/assets/memu.css
@@ -127,12 +127,12 @@ li {
 }
 
 .sub-menu-history.expanded {
-
     background-color: #f2f6fc;
-    height: 500px;
     transition: 0.5s;
     border-radius: 8px;
-    box-shadow: 03px 4px 16px rgba(26, 27, 27, 0.4)
+    box-shadow: 03px 4px 16px rgba(26, 27, 27, 0.4);
+    position: relative; 
+     display: flex;
 }
 
 .sub-menu-history {
@@ -182,7 +182,7 @@ li {
 }
 
 .button-style:hover {
-    background-color: #87cefa;
+    background-color: #E4E7ED;
     cursor: pointer;
 }
 
@@ -325,3 +325,24 @@ li {
     border-radius: 5px;
 }
 
+.records-option {
+    display: list-item;
+    width: 205px;
+    height: 40px;
+    margin: 5px 10% 10px 10%;
+    background-color: hsl(0, 0%, 100%);
+    box-shadow: 03px 2px 2px rgba(167, 171, 171, 0.4);
+    border-style: hidden;
+    border-radius: 8px;
+}
+
+.records-option:hover {
+    background-color: #E4E7ED;
+    cursor: pointer;
+}
+
+.records-text {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
